--- a/styles.css
+++ b/styles.css
@@ -311,7 +311,6 @@ body {
     object-fit: cover;
     position: absolute;
     top: 0;
-    left: 0;
     z-index: 1; /* Memastikan gambar di atas pseudo-element */
 }
 
@@ -429,6 +428,7 @@ body {
     height: auto;
     object-fit: cover;
 }
+
 .flower-images {
     width: 110%;
     height: auto;
@@ -1000,8 +1000,6 @@ form button:hover {
     transform: scale(1); /* Ukuran penuh */
 }
 
-
-
 .gift .description p {
     color: #423838;
     font-size: 0.9rem;
@@ -1043,6 +1041,7 @@ form button:hover {
     display: inline-block;
     margin-right: 10px;
     vertical-align: middle;
+
 }
 
 .gift .btn1 button::before {
@@ -1989,10 +1988,11 @@ form button:hover {
     transform: translateX(-50px); /* Awalnya dari kiri */
   }
   
- /* Tampilan untuk Laptop dan Lebar Lebih Kecil */
-@media only screen and (max-width: 1024px) {
+
+/* Responsif untuk Handphone */
+@media only screen and (min-width: 393px) and (max-width: 480px) {
     .left-section {
-        display: none; /* Sembunyikan left-section */
+        display: none; 
     }
 
     .right-section {
@@ -2000,44 +2000,148 @@ form button:hover {
         width: 100%; 
         height: 100%; 
     }
+
     #opening .overlay h1 {
-        font-size: 2.5rem; 
+        font-size: 2rem; 
     }
+    
 
     #opening .overlay h3 {
-        font-size: 1.8rem;
+        font-size: 1.5rem;
     }
 
     #opening .button {
-        font-size: 0.95rem;
-        padding: 10px 18px;
+        font-size: 0.9rem;
+        padding: 8px 16px;
     }
 
     #right-section h1 {
-        font-size: 1.8rem;
+        font-size: 1.5rem;
     }
 
     #right-section .animasi-awan img {
-        width: 90px; 
+        width: 80px; 
     }
 
     #right-section .image-arch img {
-        max-width: 350px; 
+        max-width: 300px; 
     }
-    .gift button {
-        padding: 10px 20px; /* Kurangi padding */
+
+
+
+      #opening .undangan .overlay h1 {
+        font-size: 2rem;
+        margin-bottom: 15em;
+        margin-top: 5em;
+
+      }
+
+      #opening .undangan .overlay p {
+        font-size: 1.2rem;
+        margin-bottom: -5px;
+      }
+
+      #opening .undangan .overlay h3 {
+        font-size: 1rem;
+        margin-top :0.5em;
+      }
+    
+      .gift button {
+        padding: 8px 16px; /* Kurangi padding untuk handphone */
         font-size: 0.8rem; /* Font lebih kecil */
     }
 
     .gift button::before {
-        width: 16px; /* Ikon lebih kecil */
-        height: 16px;
-        margin-right: 8px; /* Margin ikon lebih kecil */
+        width: 5px; /* Ikon lebih kecil */
+        margin-right: 10px; /* Kurangi margin ikon */
+    }
+
+    #opening .undangan  .overlay button {
+        width: 30%;
+        padding: 8px 0;
+        color: #653C3C;
+        background-color: #ffffff;
+        border: none;
+        border-radius: 25px !important;
+        font-size: 0.7em;
+        cursor: pointer;
+        transition: background-color 0.3s;
+    }
+    
+    #opening .undangan .overlay button:hover {
+        color: #E7E7E7;
+        background-color: #653C3C;
+    }
+
+    .flower-image {
+        width: 120%;
+    }
+    
+    .flower-images {
+        width: 120%;
+        height: auto;
+        object-fit: cover;
+        animation: sway 3s ease-in-out infinite;
+    }
+    .image-arch {
+        margin: 150px auto;
+        position: relative;
+        width: 300px;
+        height: 420px;
+        margin-bottom: -3em;
+        display: flex; /* Mengaktifkan Flexbox */
+        justify-content: center; /* Memusatkan gambar di dalam .image-arch */
+        align-items: center; /* Memusatkan gambar di dalam .image-arch */
+        z-index: 0; /* Pastikan pseudo-element tidak menutupi konten */
+    }
+    
+    .main-photo {
+        width: 90%;
+        height: 100%;
+        object-fit: cover;
+        position: absolute;
+        top: 0;
+        z-index: 1; /* Memastikan gambar di atas pseudo-element */
+    }
+
+    .garis-photo {
+        width: 90%;
+    }
+    .info h1 {
+        color: #653C3C;
+        font-size: 4vh;
+        margin-bottom: 6vh;
+        margin-top: 1vh;
+        opacity: 0; /* Awalnya tidak terlihat */
+        transform: scale(0.5); /* Awalnya lebih kecil */
+        transition: all 1.5s ease-in-out;
+    }
+    .info h2 {
+        font-size: 2.5vh;
+    }
+    .rsvp-container {
+        width: 90%;
+    }
+
+    .rsvp .judul h1 {
+        top: 60%; /* Atur posisi vertikal ke tengah */ 
+    }
+
+    .gift-flower {
+        width: 7em; /* Menjaga ukuran gambar agar sesuai dengan dimensi aslinya */
+    }
+    .gift .btn1 button::before {
+        content: url('image/hadiah.svg'); /* Emoji untuk hadiah */
+        padding-right: 18px;
+    }
+    .gift .btn2 button::before {
+        content: url('image/hadiah.svg'); /* Emoji untuk hadiah */
+        padding-right: 18px;
     }
 }
 
 /* Responsif untuk Handphone */
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 391px) {
     .left-section {
         display: none; 
     }
@@ -2076,6 +2180,7 @@ form button:hover {
     #opening .undangan .overlay h1 {
         font-size: 2rem;
         margin-top: 3em;
+        margin-bottom: 12em;
       }
 
       #opening .undangan .overlay p {
@@ -2089,12 +2194,127 @@ form button:hover {
       }
     
       .gift button {
-        padding: 8px 16px; /* Kurangi padding untuk handphone */
-        font-size: 0.8rem; /* Font lebih kecil */
+        padding: 8px 12px; /* Kurangi padding untuk handphone */
+        font-size: 0.7rem; /* Font lebih kecil */
     }
 
     .gift button::before {
-        width: 5px; /* Ikon lebih kecil */
+        width: 3px; /* Ikon lebih kecil */
         margin-right: 10px; /* Kurangi margin ikon */
     }
+
+    #opening .undangan  .overlay button {
+        width: 30%;
+        padding: 8px 0;
+        color: #653C3C;
+        background-color: #ffffff;
+        border: none;
+        border-radius: 25px !important;
+        font-size: 0.7em;
+        cursor: pointer;
+        transition: background-color 0.3s;
+    }
+    
+    #opening .undangan .overlay button:hover {
+        color: #E7E7E7;
+        background-color: #653C3C;
+    }
+
+    .flower-image {
+        width: 120%;
+        height: auto;
+        object-fit: cover;
+    }
+    
+    .flower-images {
+        width: 120%;
+        height: auto;
+        object-fit: cover;
+        animation: sway 3s ease-in-out infinite;
+    }
+    .image-arch {
+        margin: 70px auto;
+        position: relative;
+        width: 260px;
+        height: 380px;
+        margin-bottom: -3em;
+        display: flex; /* Mengaktifkan Flexbox */
+        justify-content: center; /* Memusatkan gambar di dalam .image-arch */
+        align-items: center; /* Memusatkan gambar di dalam .image-arch */
+        z-index: 0; /* Pastikan pseudo-element tidak menutupi konten */
+    }
+    
+    .main-photo {
+        width: 100%;
+        height: 106%;
+        object-fit: cover;
+        position: absolute;
+        top: 0;
+        z-index: 1; /* Memastikan gambar di atas pseudo-element */
+    }
+    .garis-photo {
+        width: 91.5%;
+    }
+    .info h1 {
+        color: #653C3C;
+        font-size: 4vh;
+        margin-bottom: 6vh;
+        margin-top: 2vh;
+        opacity: 0; /* Awalnya tidak terlihat */
+        transform: scale(0.5); /* Awalnya lebih kecil */
+        transition: all 1.5s ease-in-out;
+    }
+    .info h2 {
+        font-size: 2.5vh;
+    }
+    
+    .info .pemberkatan .isi {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%); /* Benar-benar di tengah */
+        text-align: center; /* Konten rata tengah */
+        justify-content: center;
+        width: 20vh;
+        margin-top: -5vh;
+    }
+    .rsvp-container {
+        width: 90%;
+    }
+
+    .gift-flower {
+        width: 7em; /* Menjaga ukuran gambar agar sesuai dengan dimensi aslinya */
+    }
+
+    .details h2 {
+        font-size: 1.1rem;
+        margin-bottom: 10px;
+        color:#fff;
+        margin-top: 4em;
+    }
+    
+    .details h3 {
+        font-size: 1.7rem;
+        margin-bottom: 10px;
+        color:#fff;
+    }
+    
+    .details p {
+        font-size: 1.1rem;
+        color:#fff;
+    }
+
+    .wish-form button {
+        width: 19%;
+        font-size: 0.9rem;
+    }
+    .gift .btn1 button::before {
+        content: url('image/hadiah.svg'); /* Emoji untuk hadiah */
+        padding-right: 18px;
+    }
+    .gift .btn2 button::before {
+        content: url('image/hadiah.svg'); /* Emoji untuk hadiah */
+        padding-right: 18px;
+    }
+    
 }
